# tiny-SfM

./: .gitignore  CMakeLists.txt  camera.py  cpptest.py  cv2_anno.txt  frame.py  incremental_unordered.py  instruction.txt  main.py  map.py  mappoint.py  matching.py  prompt.txt  reconstruction.py  syn_homography.py  test.py  vcpkg.json
algorithm/: ba.py  ba_ceres.py  datamine.py  errors.py  match.py  matching.py  mvgsolver.py  reconstruct.py  reconstruction.py
data/: synthetic_view_homography.txt
management/: trackmanager.py  viewgraph.py  worldmap.py
model/: camera.py  edge.py  frame.py  mappoint.py  worldmap.py
pipeline/: reconstruct.py
src/: ba_core.cpp
